@@ -2,12 +2,12 @@ Source: spacefm
 Section: utils
 Priority: optional
 Maintainer: IgnorantGuru <ignorantguru@gmx.com>
-Build-Depends: debhelper (>= 7.0.50~), autotools-dev, dbus, desktop-file-utils,
- libc6, libcairo2, libdbus-1-3, libglib2.0-0, libgtk2.0-0 (>= 2.24),
- libpango1.0-0, libstartup-notification0, libx11-6, shared-mime-info, intltool,
- pkg-config, libgtk2.0-dev (>= 2.24), libglib2.0-dev, fakeroot,
- libstartup-notification0-dev, libdbus-1-dev, libgdk-pixbuf2.0-0,
- libgdk-pixbuf2.0-dev, libudev0 (>=143), libudev-dev
+Build-Depends: debhelper (>= 7.0.50~), autotools-dev, build-essential, dbus,
+ desktop-file-utils, libc6, libcairo2, libdbus-1-3, libglib2.0-0,
+ libgtk2.0-0 (>= 2.24), libpango1.0-0, libstartup-notification0, libx11-6,
+ shared-mime-info, intltool, pkg-config, libgtk2.0-dev (>= 2.24),
+ libglib2.0-dev, fakeroot, libstartup-notification0-dev, libdbus-1-dev,
+ libgdk-pixbuf2.0-0, libgdk-pixbuf2.0-dev, libudev0 (>=143), libudev-dev
 Standards-Version: 3.9.1
 Homepage: http://ignorantguru.github.com/spacefm/
 
